# code-agent

./: .gitignore  .pre-commit-config.yaml  GEMINI.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: 01_user_story.yml  02_feature_request.yml  03_bug_report.yml  04_chore.yml  config.yml
.github/workflows/: test.yml
docs/: claude-code-agent.md  design.md  issue_templates_draft.md  use-case-research.md
docs/proposed_issues/: 001_setup_issue_templates.md  002_setup_ci_cd.md  003_define_research_use_case.md  004_implement_research_artifacts.md
src/code_agent/: cli.py  server.py
src/code_agent/prompts/research/: clarify_requirements.md  create_plan.md  execute_step.md  summarize.md
src/code_agent/schemas/: research.py
tests/: test_schemas.py
